# EnigmaNG

./: .gitignore  EnigmaNG Specs v2.md  library.json  platformio.ini
arduino/: MeshNetwork.h
docs/: nat-debugging-notes.md
examples/arduino/BasicNode/: BasicNode.cpp
idf_component/: CMakeLists.txt  idf_component.yml
obsolete/: EnigmaNG Specs v2.md  EnigmaNG Specs.md
openspec/: agents.md  config.yaml
src/: BatteryNode.cpp  BatteryNode.h  Crypto.cpp  Crypto.h  DnsProxy.cpp  DnsProxy.h  Fragmentation.cpp  Fragmentation.h  Gateway.cpp  Gateway.h  LinkLayer.cpp  LinkLayer.h  MeshNetwork.cpp  MeshNetwork.h  MeshNode8266.cpp  MeshNode8266.h  NetifDriver.cpp  NetifDriver.h  Onboarding.cpp  Onboarding.h  PeerManager.cpp  PeerManager.h  PhysicalLayer.cpp  PhysicalLayer.h  ProxyHandler.cpp  ProxyHandler.h  Router.cpp  Router.h  ServiceDiscovery.cpp  ServiceDiscovery.h  WebUI.cpp  WebUI.h  meshConfig.h
test/mocks/: Arduino.h  IPAddress.h  QuickEspNow.h  WiFi.h  WiFiClient.h  esp_event.h  esp_http_server.h  esp_mac.h  esp_netif.h  esp_sleep.h  esp_wifi.h  mdns.h  nvs.h  nvs_flash.h
test/portable_lib/: Crypto.h  Fragmentation.h  LinkLayer.h  PeerManager.h  Router.h  ServiceDiscovery.h  library.json
test/test_dummy/: test_main.cpp
test/test_fragmentation/: test_main.cpp
test/test_key_exchange/: test_main.cpp
test/test_link_layer/: test_main.cpp
test/test_message_encryption/: test_main.cpp
test/test_peer_manager/: test_main.cpp
test/test_route_discovery/: test_main.cpp
test/test_router/: test_main.cpp
test/test_service_discovery/: test_main.cpp
(+77 files in other folders)
